CANDLEPIN-599: Remove Guice Injector